Checkmarks Update All
Checkmarks code efficiency update, Footer GS Selected, Media Quaery GS Video Image, ..

--- a/additional_information.html
+++ b/additional_information.html
@@ -199,7 +199,7 @@
                                                     <div class="form-group form-group-md">
                                                     	<p class="weight600">The following situations are rare and are not relevant for most applicants. If none of these apply to you, click next.</p>                                           
                                                         <div class="row">
-                                                            <div class="wide">
+                                                            <div class="col-xs-12 wide">
                                                                 <div class="row">
                                                                     <div class="col-xs-12 col-md-5">		
                                                                         <input class="form-check-input checkmark" type="checkbox" value="typeofregister" tabindex="0" aria-labelledby="typeregister" id="typeregi">
@@ -283,10 +283,10 @@
                                                                     <div id="yeswhole" class="form-group"><!--toggle 'yes' radio-->
                                                                         <div class="form-group form-group-md">
                                                                             <p>What is your claim based on?</p>
-                                                                            <div class="wide">
+                                                                            <div class="col-xs-12 wide">
                                                                                 <div class="row">
                                                                                     <div class="col-xs-4 col-md-3 col-lg-3 form-group form-group-md">
-                                                                                        <label for="inlineRadio037" class="radio-inline radiocontainer">Evidence<input type="radio" name="evidencebase" id="inlineRadio037" value="evidence" tabindex="0"><span class="checkmark"></span></label>
+                                                                                        <label for="inlineRadio037" class="radio-inline radiocontainer">Evidence<input type="radio" name="wholepartradiotwo" id="inlineRadio037" value="evidence" tabindex="0"><span class="checkmark"></span></label>
                                                                                     </div>
                                                                                     <div class="col-xs-8 col-md-4 col-lg-4 form-group form-group-md">
                                                                                         <label for="inlineRadio038" class="radio-inline radiocontainer">Prior Registrations<input type="radio" name="wholepartradiotwo" id="inlineRadio038" value="prioregistrations" tabindex="0"><span class="checkmark"></span></label>
@@ -375,23 +375,23 @@
                                                         </div>
                                                         <p class="weight600">The following situations are rare and are not relevant for most applicants. If none of these apply to you, click next.</p>                                           
                                                         <div class="row">
-                                                            <div class="wide">
+                                                            <div class="col-xs-12 wide">
                                                                 <div class="row">
                                                                     <div class="col-xs-12">		
                                                                         <input class="form-check-input checkmark" type="checkbox" value="court" tabindex="0" aria-labelledby="courtdecree" id="courtd">
-                                                                        <label class="form-check-label form-check long" for="courtd" id="courtdec"><span class="radio notspecial small match" id="courtdecree">Court Decree</span></label>
+                                                                        <label class="form-check-label form-check" for="courtd" id="courtdec"><span class="radio notspecial match" id="courtdecree">Court Decree</span></label>
                                                                     </div>
                                                                     <div class="col-xs-12">
                                                                         <input class="form-check-input checkmark" type="checkbox" value="ttab" tabindex="0" aria-labelledby="priorttab" id="ttabmade">
-                                                                        <label class="form-check-label form-check long" for="ttabmade" id="ttabdecision"><span class="radio notspecial small" id="priorttab">Prior decision made by the Trademark Trial and Apeal Board (TTAB)</span></label>
+                                                                        <label class="form-check-label form-check" for="ttabmade" id="ttabdecision"><span class="radio notspecial" id="priorttab">Prior decision made by the Trademark Trial and Apeal Board (TTAB)</span></label>
                                                                     </div>
                                                                     <div class="col-xs-12">
                                                                         <input class="form-check-input checkmark" type="checkbox" value="conflicting" tabindex="0" aria-labelledby="conflictingreg" id="conflict">
-                                                                        <label class="form-check-label form-check long" for="conflict" id="conflictowner"><span class="radio notspecial small" id="conflictingreg">Written Consent signed by owner of conflicting registrations</span></label>
+                                                                        <label class="form-check-label form-check" for="conflict" id="conflictowner"><span class="radio notspecial" id="conflictingreg">Written Consent signed by owner of conflicting registrations</span></label>
                                                                     </div>
                                                                     <div class="col-xs-12">
                                                                         <input class="form-check-input checkmark" type="checkbox" value="earlier" tabindex="0" aria-labelledby="early" id="earlieruse">
-                                                                        <label class="form-check-label form-check long" for="earlieruse" id="firstcommerce"><span class="radio notspecial small match" id="early">Earlier date of first use in commerce</span></label>		
+                                                                        <label class="form-check-label form-check" for="earlieruse" id="firstcommerce"><span class="radio notspecial match" id="early">Earlier date of first use in commerce</span></label>		
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -424,7 +424,7 @@
                                                                             </div>
                                                                             <div class="col-xs-12">
                                                                                 <input class="form-check-input checkmark" type="checkbox" value="noconcurrentfiles" tabindex="0" aria-labelledby="noconcurrentfile" id="noconcurrentfiles">
-                                                                                <label class="form-check-label form-check long" for="noconcurrentfiles" id="nofiles"><span class="radio notspecial small" id="noconcurrentfile">Concurrent User does not have a Registration/Application with USPTO</span></label>
+                                                                                <label class="form-check-label form-check" for="noconcurrentfiles" id="nofiles"><span class="radio notspecial" id="noconcurrentfile">Concurrent User does not have a Registration/Application with USPTO</span></label>
                                                                             </div>
                                                                             <div class="col-xs-12 col-md-7 form-group form-group-md">
                                                                                 <label for="concurrentname">Concurrent User&#8217;s Name</label> 
