--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -689,7 +689,7 @@
                                     <h4 class="weight600">Acknowledgement of Certification in Good Standing</h4>
                                     <div class="form-group form-group-md">
                                         <input class="form-check-input checkmark" type="checkbox" value="" tabindex="0" aria-labelledby="userAccept-label" id="user-accept-checkbox" name="user-accept-checkbox">
-                                        <label class="form-check-label form-check long" for="user-accept-checkbox" id="userAccept-label"><span class="radio notspecial small">I certify that this attorney is in good standing with a bar of the highest court of any US State, the District of Columbia, the US Commonwealths or US Territories.</span></label>
+                                        <label class="form-check-label form-check" for="user-accept-checkbox" id="userAccept-label"><span class="radio notspecial">I certify that this attorney is in good standing with a bar of the highest court of any US State, the District of Columbia, the US Commonwealths or US Territories.</span></label>
                                     </div>
                                     <div class="form-group form-group-md">
                                         <label class="small long upload-drop-zone" for="file"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>
@@ -707,10 +707,10 @@ Upload bar credentials, including certificate of good standing from highest cour
                              	</div><!--END US affiliation-->
                                 <div id="canadianaffiliation" role="region" aria-labelledby="affiliation" class="hidethis">
                                     <div class="form-group">
-                                        <label class="small" for="ca-attornery-query">Please select a name from the registered OED list from Canadian Trademark and Patent Agents</label>
+                                        <label for="ca-attornery-query">Please select a name from the registered OED list from Canadian Trademark and Patent Agents</label>
                                         <span class="twitter-typeahead" style="position: relative; display: inline-block; direction: ltr;">	
                                         <input class="tt-hint" type="text" autocomplete="off" spellcheck="off" disabled="" style="position: absolute; top: 0px; left: 0px; border-color: transparent; box-shadow: none; background: none 0% 0% / auto repeat scroll padding-box border-box rgb(255, 255, 255);">
-                                        <input class="form-control tt-query" name="attorneyCAagentName" id="ca-attornery-query" placeholder="Start typing something to search..." type="text" value="" autocomplete="off" spellcheck="false" dir="auto" style="position: relative; vertical-align: top; background-color: rgb(255, 255, 255);">
+                                        <input class="form-control tt-query" name="attorneyCAagentName" id="ca-attornery-query" placeholder="Start typing something to search..." type="text" value="" autocomplete="off" spellcheck="false" dir="auto" style="position: relative; background-color: rgb(255, 255, 255);">
                                             <span style="position: absolute; left: -9999px; visibility: hidden; white-space: nowrap; font-family: &quot;Segoe UI&quot;, &quot;Helvetica Neue&quot;, Tahoma, Arial; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; word-spacing: 0px; letter-spacing: 0px; text-indent: 0px; text-rendering: auto; text-transform: none;">a</span>
                                                 <span class="tt-dropdown-menu" style="position: absolute; top: 100%; left: 0px; z-index: 100; display: none; right: auto;">
                                                     <div class="tt-dataset-0" style="display: none;">
