--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -230,7 +230,7 @@
                                                         </div>
                                                         <div class="col-xs-12 form-group form-group-md">
                                                             <input class="form-check-input checkmark" type="checkbox" value="specimen" tabindex="0" id="specimen">
-                                                            <label class="form-check-label form-check long" for="specimen"><span class="radio notspecial small">Check here to provide a specimen for this individual good/service.</span></label>
+                                                            <label class="form-check-label form-check" for="specimen"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                         </div>
                                                         <div id="yesspecimenone" class="form-group form-group-md"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6">
@@ -280,7 +280,7 @@
                                                         </div>
                                                         <div class="col-xs-12 form-group form-group-md">
                                                             <input class="form-check-input checkmark" type="checkbox" value="specimentwo" tabindex="0" id="specimentwo">
-                                                            <label class="form-check-label form-check long" for="specimentwo"><span class="radio notspecial small">Check here to provide a specimen for this individual good/service.</span></label>
+                                                            <label class="form-check-label form-check" for="specimentwo"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                         </div>
                                                         <div id="yesspecimentwo" class="form-group form-group-md"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6">
