Dashboard Change Req + Button

--- a/dashboard.html
+++ b/dashboard.html
@@ -115,51 +115,51 @@
                                                     <table id="dashboardtableone" class="table dataTable row-border display responsive" style="width:100%" role="grid" aria-describedby="filings">
                                                         <thead>
                                                         	<tr role="row">
-                                                                <th colspan="5" scope="colgroup">Filings</th>
+                                                                <th colspan="5" scope="colgroup"><span id="filings">Filings</span> <button type="button" class="btn-sm btn-success fill">New Application</button></th>
                                                             </tr>
                                                             <tr role="row">
                                                                 <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Serial#</th>
                                                                 <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Registration#</th>
-                                                                <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Class-num: activate to sort column descending">Mark</th>
-                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Description: activate to sort column ascending">Owner</th>
-                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Status</th>
+                                                                <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Class-num: activate to sort column descending">Owner</th>
+                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Description: activate to sort column ascending">Status</th>
+                                                                <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Mark</th>
                                                             </tr>
                                                         </thead>
                                                         <tbody>
                                                           <tr>
                                                             <td>87697840</td>
                                                             <td>87697838</td>
-                                                            <td>[image]</td>
                                                             <td>Lynn Stanikmas</td>
                                                             <td>Draft</td>
+                                                            <td>[image]</td>
                                                           </tr>
                                                           <tr>
                                                             <td>87697248</td>
                                                             <td>87587238</td>
-                                                            <td>[image]</td>
                                                             <td>Jacob Goldstein</td>
                                                             <td>Completed</td>
+                                                            <td>[image]</td>
                                                           </tr>
                                                           <tr>
                                                             <td>87697840</td>
                                                             <td>87697839</td>
-                                                            <td>[image]</td>
                                                             <td>Jackie Babos</td>
                                                             <td>Draft</td>
+                                                            <td>[image]</td>
                                                           </tr>
                                                           <tr>
                                                             <td>87697899</td>
                                                             <td>87693875</td>
-                                                            <td>[image]</td>
                                                             <td>Li Zhang</td>
                                                             <td>Draft</td>
+                                                            <td>[image]</td>
                                                           </tr>
                                                           <tr>
                                                             <td>87697294</td>
                                                             <td>87697387</td>
-                                                            <td>[image]</td>
                                                             <td>Avo Reid</td>
                                                             <td>Completed</td>
+                                                            <td>[image]</td>
                                                           </tr>
                                                         </tbody>
                                                     </table>
