--- a/dashboard.html
+++ b/dashboard.html
@@ -305,14 +305,14 @@
                                             </div>
                                         <div class="col-xs-12">
                                             <div class="col-xs-12" id="announce">
-                                                <h3>Announcements</h3>
+                                                <h3 id="announceheader">Announcements</h3>
                                             </div>
                                             <div class="col-xs-12 dashsection">
-                                                <div class="tabwidget" id="tabmusic-wt">
+                                                <div class="tabwidget" id="tabmusic-wt" aria-describedby="announceheader">
                                                     <ul>
-                                                        <li class="notice"><a href="#panel1-wt" aria-describedby="tab-tip-wt">Updated Two-step Authentication</a></li>
-                                                        <li><a href="#panel2-wt">System Maintenance Notifications</a></li>
-                                                        <li><a href="#panel3-wt">Electronic System Maintenance Schedule</a></li>
+                                                        <li class="notice"><a href="#panel1-wt" aria-describedby="panel1-wt">Updated Two-step Authentication</a></li>
+                                                        <li><a href="#panel2-wt" aria-describedby="panel2-wt">System Maintenance Notifications</a></li>
+                                                        <li><a href="#panel3-wt" aria-describedby="panel3-wt">Electronic System Maintenance Schedule</a></li>
                                                     </ul>
                                                     <div class="tabpanels second">
                                                         <div id="panel1-wt" tabindex="0">
