Dashboard Change Reqs
Images, header color change that didn't commit yesterday, search field widths at certain random responsive views (for now)

--- a/dashboard.html
+++ b/dashboard.html
@@ -131,35 +131,35 @@
                                                             <td>87697838</td>
                                                             <td>Lynn Stanikmas</td>
                                                             <td>Draft</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                           <tr>
                                                             <td>87697248</td>
                                                             <td>87587238</td>
                                                             <td>Jacob Goldstein</td>
                                                             <td>Completed</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                           <tr>
                                                             <td>87697840</td>
                                                             <td>87697839</td>
                                                             <td>Jackie Babos</td>
                                                             <td>Draft</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                           <tr>
                                                             <td>87697899</td>
                                                             <td>87693875</td>
                                                             <td>Li Zhang</td>
                                                             <td>Draft</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                           <tr>
                                                             <td>87697294</td>
                                                             <td>87697387</td>
                                                             <td>Avo Reid</td>
                                                             <td>Completed</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/Example3_shape.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                         </tbody>
                                                     </table>
@@ -194,7 +194,7 @@
                                                           <tr>
                                                             <td>87697840</td>
                                                             <td>87697834</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                             <td>Lynn Stanikmas</td>
                                                             <td>12/21/2019</td>
                                                             <td>Abandoned</td>
@@ -203,7 +203,7 @@
                                                           <tr>
                                                             <td>87697248</td>
                                                             <td>87697235</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                             <td>Jacob Goldstein</td>
                                                             <td>None</td>
                                                             <td>Completed</td>
@@ -212,7 +212,7 @@
                                                           <tr>
                                                             <td>87697899</td>
                                                             <td>87697823</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                             <td>Li Zhang</td>
                                                             <td>Draft</td>
                                                             <td>Draft</td>
@@ -221,7 +221,7 @@
                                                           <tr>
                                                             <td>87697840</td>
                                                             <td>87697834</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/stylized_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                             <td>Lynn Stanikmas</td>
                                                             <td>12/21/2019</td>
                                                             <td>Abandoned</td>
@@ -230,7 +230,7 @@
                                                           <tr>
                                                             <td>87697248</td>
                                                             <td>87697235</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/adf-d-8-e-123-jpg.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                             <td>Jacob Goldstein</td>
                                                             <td>None</td>
                                                             <td>Completed</td>
@@ -239,7 +239,7 @@
                                                           <tr>
                                                             <td>87697899</td>
                                                             <td>87697823</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/designonly_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                             <td>Li Zhang</td>
                                                             <td>Draft</td>
                                                             <td>Draft</td>
@@ -248,7 +248,7 @@
                                                           <tr>
                                                             <td>87697840</td>
                                                             <td>87697834</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/designonly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                             <td>Lynn Stanikmas</td>
                                                             <td>12/21/2019</td>
                                                             <td>Abandoned</td>
@@ -257,7 +257,7 @@
                                                           <tr>
                                                             <td>87697248</td>
                                                             <td>87697235</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/designwithtext_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                             <td>Jacob Goldstein</td>
                                                             <td>None</td>
                                                             <td>Completed</td>
@@ -266,7 +266,7 @@
                                                           <tr>
                                                             <td>87697899</td>
                                                             <td>87697823</td>
-                                                            <td>[image]</td>
+                                                            <td><img src="images/Example2_shape_words.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                             <td>Li Zhang</td>
                                                             <td>Draft</td>
                                                             <td>Draft</td>
