--- a/submission_successful.html
+++ b/submission_successful.html
@@ -109,6 +109,8 @@
                                 <h2>Success!</h2>
                                 <p>We received your application and assigned it serial number ########. <span class="weight600">A PDF version of your filing opened in a new window, you are able to save it for your records.</span> This PDF will serve as your official confirmation copy. For electronically submitted applications, we do not mail paper filing receipts.</p>
                                 <p><span class="weight600">What&#8217;s next?</span><br>In approximately three months, your application will be assigned to a USPTO examining attorney for review. Visit our website for an explanation of <a href="https://www.uspto.gov/trademark/trademark-timelines/trademark-application-and-post-registration-process-timelines" target="_blank">application process timelines</a>.</p>
+                                <iframe src="http://localhost:8888/site_current/receipts/demodoc.pdf" class="img-responsive" allowfullscreen webkitallowfullscreen></iframe>
+
 								<p>To be sure that you don&#8217;t miss an important email from the USPTO and to avoid the possible <a href="https://www.uspto.gov/trademarks-application-process/abandoned-applications" target="_blank">abandonment</a> of your application, you should check your application status and review your documents in our database, <a href="http://tsdr.uspto.gov/" target="_blank">Trademark Status and Document Retrieval</a> (TSDR) every three to four months.</p>
                                 <p>Thank you.</p>
                             </div>
