--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -170,6 +170,13 @@
                 </div>
                 <h1>Trademark Details &#8211; Design with Text</h1>
                 <p class="required"><span class="weight600">&#42; = Required</span></p>
+                <p class="instructions" id="costsavingoptions">Save More Mode</p>
+                <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn save more labels on or off">
+                    <label class="switch">
+                    <input class="togglesavemore" type="checkbox">
+                    <span class="slider"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                    </label>
+                </div>
                 <!--START Trademark Details Design with Text-->
                 <div class="row">
                     <div class="col-xs-12" id="uploaded">
@@ -181,7 +188,7 @@
                            <fieldset>
                            	<div class="row">
                                 <div class="form-group form-group-md col-xs-12">
-                                    <p class="required weight600" aria-level="3"><span class="weight600">&#42;</span> Mark Literal <span class="label label-info subtle">Save More</span></p>
+                                    <p class="required weight600" aria-level="3"><span class="weight600">&#42;</span> Mark Literal <span class="label label-info subtle visuallyremoved">Save More</span></p>
                                     <label for="ta2">Enter the words, letters and numbers appearing in the mark. <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label> 
                                     <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                         <div class="row">
@@ -204,11 +211,11 @@
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescolorclaim"><!--toggle 'yes' radio-->
-                                                            <label for="ta3" class="save">Identify the colors in your mark. <span class="label label-info subtle">Save More</span></label> 
+                                                            <label for="ta3" class="save">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved">Save More</span></label> 
                                                             <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600">Mark Description</h3>
-                                                            <label for="ta2" class="save"><span class="weight600">&#42;</span> Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Save More</span></label>  
-                                                            <textarea id="ta2" rows="3" class="form-control" placeholder="This mark consists of" required></textarea>
+                                                            <label for="ta2" class="save"><span class="weight600">&#42;</span> Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Save More</span></label>  
+                                                            <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                         <div id="nocolorclaim" class="form-group form-group-md"><!--toggle 'no' radio-->
                                                             <input class="form-check-input checkmark" type="checkbox" value="accept B W mark" role="checkbox" tabindex="0" aria-labelledby="acceptmark" id="bwmark">
@@ -220,7 +227,7 @@
                                                             </div>
                                                             <h3 class="weight600">Mark Description</h3>
                                                             <label for="ta5"><span class="weight600">&#42;</span> Provide a description of the mark.</label>  
-                                                            <textarea id="ta5" rows="3" class="form-control" placeholder="This mark consists of" required></textarea>
+                                                            <textarea id="ta5" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                     </div>
                                                 </section>
@@ -247,7 +254,7 @@
                                                             <label for="inlineRadio4" class="radio-inline radiocontainer">No<input type="radio" name="foreignradio" id="inlineRadio4" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yestranslation"><!--toggle 'yes' radio-->
-                                                            <h3 class="weight600">Enter the foreign language and the translation. <span class="label label-info subtle">Save More</span></h3>
+                                                            <h3 class="weight600">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved">Save More</span></h3>
                                                             <div class="row">
                                                                 <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                     <label for="language">Language</label>
@@ -291,7 +298,7 @@
                                                           <label for="inlineRadio6" class="radio-inline radiocontainer">No<input type="radio" name="nonlatradio" id="inlineRadio6" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yestransliteration"><!--toggle 'yes' radio-->
-                                                            <h3 class="weight600">Enter the transliteration of the mark. <span class="label label-info subtle">Save More</span></h3>
+                                                            <h3 class="weight600">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved">Save More</span></h3>
                                                             <div class="row">
                                                                 <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                     <label for="languagetranslit">Language</label>
@@ -340,7 +347,7 @@
                                                         	<p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
-                                                            <p class="savep"><span class="label label-info subtle">Save More</span></p>
+                                                            <p class="savep"><span class="label label-info subtle visuallyremoved">Save More</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
                                                             	<div class="row">
                                                                 	<div class="containsaname col-xs-12">
