--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -223,7 +223,7 @@
                                                             <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600">Mark Description</h3>
                                                             <label for="ta2"><span class="weight600">&#42;</span> Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>  
-                                                            <textarea id="ta2" rows="3" class="form-control" placeholder="This mark consists of" required></textarea>
+                                                            <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                         <div id="nocolorclaim" class="form-group form-group-md"><!--toggle 'no' radio-->
                                                             <input class="form-check-input checkmark" type="checkbox" value="accept B W mark" tabindex="0" aria-labelledby="acceptmark" id="bwmark">
@@ -235,7 +235,7 @@
                                                             </div>
                                                             <h3 class="weight600">Mark Description</h3>
                                                             <label for="ta5"><span class="weight600">&#42;</span> Provide a description of the mark.</label>  
-                                                            <textarea id="ta5" rows="3" class="form-control" placeholder="This mark consists of" required></textarea>
+                                                            <textarea id="ta5" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                     </div>
                                                 </section>
