Fixed issue with 'Lead' paragraph

--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -176,7 +176,7 @@
                     <div class="row">
                         <div class="col-xs-12" id="declarationsignature">
                                 <div class="lead">
-                                    <p>Selecting edit will take you back to the appropriate section in the application.</p>
+                                    <p id="lead">Selecting edit will take you back to the appropriate section in the application.</p>
                                 </div>
                                 <div class="card-text noexpand">
                                     <h2 class="card-title weight600">Review Application</h2>
