--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -173,7 +173,7 @@
                             <h1>Filing Basis</h1>
                         </div>
                         <div class="col-xs-4">
-                            <label for="country">Page Layout</label>
+                            <label for="pagelayout">Page Layout</label>
                             <select class="form-control" id="pagelayout">
                               <option value="Select">Select</option>
                               <option value="guided">Guided</option>
@@ -184,7 +184,7 @@
                     <div class="row">
                         <div class="col-xs-12" id="basisabde">
                                 <div class="lead">
-                                    <p class="weight600">Provide a specimen for all goods/services within the class. Only one specimen is required per class.</p>
+                                    <p id="lead" class="weight600">Provide a specimen for all goods/services within the class. Only one specimen is required per class.</p>
                                 </div>
                                 <div class="card-text noexpand blue">
                                     <h2 class="card-title weight600">Class 003</h2>
