--- a/payment.html
+++ b/payment.html
@@ -176,7 +176,7 @@
                     <p class="required"><span class="weight600">&#42; = Required fields</span></p>
                     <div class="row">
                         <div class="col-xs-12" id="payment">
-                            <div class="lead">
+                            <div id="lead">
                                 <h2 id="order_details">Order Details <a href="#" data-toggle="tooltip" title="Order details" class="glyphicon glyphicon-info-sign test" data-placement="right"></a></h2>
                             </div>
                             <form action="" method="post" >
