--- a/GS_selected.html
+++ b/GS_selected.html
@@ -170,7 +170,7 @@
           <h1>Goods and Services</h1>
                     <div class="row">
                         <div class="col-xs-12" id="gsselected">
-                            <div class="lead">
+                            <div id="lead">
                                 <p>All of the selected goods and services are provided below.</p>
                             </div>
                             	<div class="row">
